--- a/faq.html
+++ b/faq.html
@@ -9,9 +9,9 @@ description:
 
 <div style="background-color: #ffffff; padding-top: 5vh; text-align: center;">
     <a name="ApplicationFAQ"></a>
-    <h2 style="font-size: 2.0em; ">Application Guide</h2>
+    <h2 style="font-size: 2.0em; margin-bottom: 0px;">Application Guide</h2>
     <div style="width: 75%; display: inline-block;">
-            <p style="text-align: center;">
+            <p style="text-align: center; margin-bottom: 40px;">
                 <i>We want you to write an amazing application, so we've put together a guide 
                 filled with what you should focus on when writing your responses. Remember, 
                 the best opportunity you'll have to learn more about BEAM and our 
@@ -25,10 +25,11 @@ description:
                 this statement motivates you personally to join BEAM? Choose at least one 
                 specific word or phrase that resonates with you.</b>
             </p>
-            <div style="justify-content: space-around;">
+            <!-- <div style="justify-content: space-around;">
                 <p><i>Props to you on starting this so early!</i></p>
                 <p><i>200-300 words</i></p>
             </div>
+            -->
             <p style="text-align: left;">
             There's a lot of directions you can take with this question. We recommend sticking
             to just one specific word/phrase that you feel truly resonates with you, and building
@@ -39,10 +40,11 @@ description:
             <p style="text-align: left;"><b>Choose a scientific concept or topic. 
                 How would you explain it in a way that a K-8 school student could 
                 understand? Feel free to include analogies or real-world examples!</b></p>
-            <div style="justify-content: space-around;">
+            <!-- <div style="justify-content: space-around;">
                 <p><i>You're doing great so far!</i></p>
                 <p><i>200-300 words</i></p>
             </div>
+            -->
             <p style="text-align: left;">
             Try to envision yourself actually teaching this lesson! One suggestion we have is to think about 
             any scenarios or questions that may come up with your lesson topic, and work your response to account
@@ -53,8 +55,9 @@ description:
             </p>
             
             <p style="text-align: left;"><b>What do you believe makes a great mentor?</b></p>
-            <span><i>Last question - you're almost there!</i></span>
+            <!-- <span><i>Last question - you're almost there!</i></span>
             <span><i>200-300 words</i></span>
+            -->
             <p style="text-align: left;">
             We're not trying to trick you on this one - we really want to know what you think
             makes a great mentor! A common <strong>pitfall</strong> that we see in applications
