--- a/join.html
+++ b/join.html
@@ -11,8 +11,9 @@ description:
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
   <div class="content" style="width: 60%; padding-right: 8%;">
-    <h2 style="font-size: 2.0em; text-align: left;">Our spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">application</a> is officially released! <br>
-            Our application is due on Friday, January 26th - 11:59 PM PST
+    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">application</a> 
+      and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
+            Our application is due on Friday, January 26th - 11:59 PM PST.
     </h2>
     <!-- Next 4 lines are for AFTER Aplication season -->
   <!--
