--- a/faq.html
+++ b/faq.html
@@ -68,7 +68,7 @@ description:
             mentor, and you'll do just fine.
             </p>
 
-            <p style="text-align: center;">
+            <p style="text-align: center; margin-top: 40px;">
                 <i>You did it! We hope that wasn't so bad. We're really excited to see the fantastic work you've put into your application,
                 and you should be proud for completing it! Decisions will be released on <strong>Sunday, January 28 at 8:00 AM PST.</strong></i>
             </p>
