--- a/join.html
+++ b/join.html
@@ -99,18 +99,22 @@ description:
         not expect? </h2>
       <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join2.png"></img> -->
       <p style="text-align: left;">
-        I found out about BEAM through Reddit, so coming in, I didn’t know what to expect. Berkeley was, and still is,
-        very new to me, which <b> has made BEAM very influential in my growing idea of what it's really like to be a Cal
-          student.</b> I like working with kids, and hope to go into teaching at some point in my career, so the
-        opportunity to work in a classroom for an hour a day has been invaluable. What I definitely did not expect was
-        the <b>sense of community</b> within BEAM—I had no idea that a decal could be a family, but I can’t think of any
-        other way to describe you all. It’s really refreshing refreshing to be around people so dedicated and passionate
-        about something so honorable and good every week. Everyone takes their job seriously, and I have a lot of
-        respect for that.
+        As Cal students, it is well-known that we quickly become wrapped up in our own worlds, often oblivious to the 
+        challenges that nearby underrepresented communities face daily. Although UC Berkeley is academically prestigious, 
+        <b>educational inconsistencies within Oakland elementary and middle schools around the corner are prevalent.</b> I never 
+        expected that I could help bridge these gaps as a BEAM mentor. Initially, I imagined the club would be a great way 
+        to reignite the passion I had for tutoring and babysitting in high school, but it grew to be much more. BEAM has 
+        opened my eyes to the changes Cal students can make on a child’s confidence in STEM education. Although we ran 
+        experiments with the kids one day a week, I witnessed the positive effects of our mentorship firsthand. We investigated 
+        toxicity in a game where ping-pong balls were transferred to represent bioaccumulation, spearheaded series versus 
+        parallel circuits to practice physics, and recognized pitches and tones of acoustics through homemade harmonicas 
+        with popsicle sticks, rubber bands and straws. <b>I expected to build connections with the kids, but I did not expect 
+        that I could be a teacher in the classroom as well as a role model in their personal lives,</b> yet now, cannot imagine 
+        anything less. BEAM IS AWESOME
       </p>
       <p style="text-align:left;">
         <i>
-          Sara Tetsu, 1 semester in BEAM
+          Jolie Witkowski, 1 fabulous semester in BEAM
         </i>
       </p>
     </div>
