--- a/faq.html
+++ b/faq.html
@@ -80,7 +80,7 @@ description:
     </div>
 </div>
 
-<div style="background-color:#f2f2f2; padding-top: 5vh; text-align: center;">
+<div style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
   <a name="DecalFAQ"></a>
   <h2 style="font-size: 2.0em; ">Frequently Asked Questions about <i>Decal</i></h2>
 
