--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@ description:
 
 <div style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
   <a name="DecalFAQ"></a>
-  <h2 style="font-size: 2.0em; ">Frequently Asked Questions about <i>Decal</i></h2>
+  <h2 style="font-size: 2.0em; ">Frequently Asked Questions</h2>
 
   <div style="width:75%; display:inline-block;">
     <p style="text-align: left; "> <b>What is the weekly time commitment? </b></p>
