--- a/about.html
+++ b/about.html
@@ -308,8 +308,8 @@ description:
                 ['Destiny Ogu', 'MCB + Data Science 2025', 'Site Leading | Logistics', 'destiny'],
                 ['Ekansh Agrawal', 'MCB 2025', 'Site Leading | Mentor Development', 'ekansh'],
                 ['Ella Kasamis', 'BioE 2026', 'Curriculum | Logistics', 'ella'],
-                ['Emily Yepez', '2025', 'Exec Head of Mentor Development', 'white'],
-                ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'white'],
+                ['Emily Yepez', '2025', 'Exec Head of Mentor Development', 'emilyyy'],
+                ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'gaby'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'grace'],
                 ['Hailey Adams', 'MCB 2024', 'Site Leading | Outreach', 'hailey'],
                 ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Outreach', 'hannah'],
@@ -327,7 +327,7 @@ description:
                 ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
                 ['Natalie Hoang', 'IEOR 2026', 'Logistics | Outreach', 'natalie'],
-                ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'white'],
+                ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'nicole'],
                 ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'pattyice'],
                 ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
                 ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'rishi'],
