--- a/donate.html
+++ b/donate.html
@@ -113,6 +113,8 @@ description:
                 // donor list, modify as needed
                 const donors1 = [
                     { donorName: 'Sejal Rajurkar' },
+                    { donorName: 'Patrick Oare' },
+                    { donorName: 'Anne Diga Jacobsen' },
                 ];
                 // in-place sorts the donors
                 donors1.sort(function(a, b) {
