--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@ description:
                 ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'safaa'],
                 ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
                 ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
-                ['Surabhi Haniyur', '2024', 'President', 'surabhi'],
+                ['Surabhi Haniyur', 'Microbial Biology 2024', 'President', 'surabhi'],
                 ['Victoria Jauregui', '2024', 'Site Leading | Mentor Development', 'white'],
                 ['Ysabelle Sibley', '2025', 'Curriculum | Outreach', 'ysabelle'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
