--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ description: Berkeley Engineers and Mentors
 						</span></button>
 			</div>
 			<div class=" image">
-				<img src="/images/Seniors2022.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/group-photos/sp2024retreat.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
