--- a/donate.html
+++ b/donate.html
@@ -47,10 +47,10 @@ description:
         },
         data: {
             columns: [
-            ['Lesson Materials', 40],
-              ['Transportation to Site', 40],
-              ['Risk Management', 16],
-              ['Advertising and Member Recruitment', 4]
+            ['Lesson Materials', 21.3],
+              ['Transportation to Site', 40.1],
+              ['Risk Management', 29.5],
+              ['Advertising + Recruitment', 9.1]
             ],
             //5bba6f green
             //fd151b red
@@ -61,7 +61,7 @@ description:
             'Lesson Materials': '#5bba6f',
             'Transportation to Site': '#437f97',
             'Risk Management': '#ffb30f',
-            'Advertising and Member Recruitment': '#fd151b'
+            'Advertising + Recruitment': '#fd151b'
         },
         color: function (color, d) {
             // d will be 'id' when called for legends
@@ -74,7 +74,7 @@ description:
             
         },
         donut: {
-            title: "BEAM 2022-23 Budget"
+            title: "BEAM 2023-2024 Budget"
         }
     });
     </script>
