--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-			 <p class="body">Interested in being part of the BEAM team? Our Fall 2022 Application will be published after our
-				<!-- <a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>; --> infosession at the begining of the semester.
+			 <p class="body">Interested in being part of the BEAM team? Our Fall 2024 Application will be published after our
+				<!-- <a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>; --> infosession at the beginning of the semester.
 				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a>, our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 
 				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Fall 2022 Application can be found <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform">here</a>,
