Updated staff roster

--- a/about.html
+++ b/about.html
@@ -294,49 +294,29 @@ description:
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
             var data = [
-                ['Adithya Sagar', '2025', 'External Affairs | Outreach', 'white'],
-                ['Aditya Murali', 'BioE 2024', 'Exec Head of Site Leading', 'aditya'],
-                ['Akshara Vykunta', 'MCB 2023', 'Exec Head of Logistics', 'akshara'],
-                ['Alyssa Chang', 'MCB 2025', 'Site Leading | Outreach', 'alyssa'],
-                ['Andrew Shih', 'MCB & Data Science 2023', 'Site Leading', 'andrew'],
-                ['Angela Shu', 'Cognitive Science 2024', 'External Affairs | Menter Development', 'angela'],
-                ['Apollo Loh', 'EECS & Philosophy 2026', 'External Affairs | Logistics', 'apollo'],
+                ['Adithya Sagar', '2025', 'Head of Outreach', 'white'],
+                ['Apollo Loh', 'EECS & Philosophy 2026', 'Head of Logistics', 'apollo'],
                 ['Ashley Kaya', 'Microbial Biology 2025', 'Exec Head of External Affairs', 'ashley'],
                 ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
-                ['Carina Kim', 'Architecture + Linguistics 2025', 'Site Leading | Mentor Development', 'carina'],
-                ['Cassandra Davis', '2025', 'Site Leading | Mentor Development', 'cassie'],
+                ['Carina Kim', 'Architecture + Linguistics 2025', 'President', 'carina'],
+                ['Cassandra Davis', '2025', 'Head of Mentor Development', 'cassie'],
                 ['Destiny Ogu', 'MCB + Data Science 2025', 'Site Leading | Logistics', 'destiny'],
-                ['Ekansh Agrawal', 'MCB 2025', 'Site Leading | Mentor Development', 'ekansh'],
-                ['Ella Kasamis', 'BioE 2026', 'Curriculum | Logistics', 'ella'],
-                ['Emily Yepez', '2025', 'Exec Head of Mentor Development', 'emilyyy'],
-                ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'gaby'],
-                ['Grace Xie', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'grace'],
-                ['Hailey Adams', 'MCB 2024', 'Site Leading | Outreach', 'hailey'],
-                ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Outreach', 'hannah'],
-                ['Jacob Yim', 'Computer Science 2023', 'Site Leading | Curriculum', 'jacob'],
-                ['Jared Puerta', 'Computer Science 2024', 'President', 'jared'],
-                ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
-                ['Kaitlyn Wang', '2024', 'Exec Head of Site Leading', 'kaitlyn'],
+                ['Ekansh Agrawal', 'MCB 2025', 'Head of Mentor Development', 'ekansh'],
+                ['Ella Kasamis', 'BioE 2026', 'Logistics | Site Leading', 'ella'],
+                ['Emily Yepez', '2025', 'President', 'emilyyy'],
+                ['Grace Xie', 'MCB + Data Science 2026', 'Head of Curriculum', 'grace'],
+                ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Site Leading', 'hannah'],
                 ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
-                ['Kenneth Suhaili', '2023', 'Site Leading | Logisitcs', 'kenneth'],
-                ['Lucy Gleeson', 'ChemE 2024', 'Exec Head of Curriculum', 'lucy'],
-                ['Makenna Leung', 'Anthropology 2025', 'Site Leading | External Affairs', 'makenna'],
-                ['Marine Lyden', 'MCB + Public Policy 2025', 'Site Leading | Mentor Development', 'marine'],
-                ['Mason Earhart', 'Chemistry 2024', 'Curriculum | Logistics', 'mason'],
+                ['Makenna Leung', 'Anthropology 2025', 'Head of Site Leading', 'makenna'],
+                ['Marine Lyden', 'MCB + Public Policy 2025', 'Head of Site Leading', 'marine'],
                 ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'meisen'],
                 ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
-                ['Natalie Hoang', 'IEOR 2026', 'Logistics | Outreach', 'natalie'],
-                ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'nicole'],
+                ['Natalie Hoang', 'IEOR 2026', 'Head of Logistics', 'natalie'],
                 ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'pattyice'],
-                ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
-                ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'rishi'],
+                ['Rebecca Bernstein', '2025', 'Curriculum | Site Leading', 'rebecca'],
                 ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'safaa'],
-                ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
-                ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
-                ['Surabhi Haniyur', 'Microbial Biology 2024', 'President', 'surabhi'],
-                ['Victoria Jauregui', '2024', 'Site Leading | Mentor Development', 'white'],
-                ['Ysabelle Sibley', '2025', 'Curriculum | Outreach', 'ysabelle'],
+                ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'Curriculum | Site Leading', 'shlok'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
             ];
             //Categories to sort by. In this case, sort by year.
