updated join page

--- a/join.html
+++ b/join.html
@@ -40,8 +40,8 @@ description:
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Tuesday, September 10th - 8:00 PM PST <br>
-            Location TBA<br>
+            Tuesday, September 10th 8:00-10:00 PM PST <br>
+            Anthropology Art Building 160<br>
           </p>
 
           <p> More details are available on our <a target=_blank
