Su24 updates - Join + FAQ (#91)
* updated join page

* updated FAQ

--- a/join.html
+++ b/join.html
@@ -11,11 +11,15 @@ description:
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
   <div class="content" style="width: 60%; padding-right: 8%;">
-    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">Application</a> 
+    <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 Application will be released soon! <br>
+      Our application will be due on Friday, September 13th - 11:59 PM PST.
+    </h2>
+
+    <!--<h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
             Our application is due on Friday, January 26th - 11:59 PM PST.
-    </h2>
-    <!-- Next 4 lines are for AFTER Aplication season -->
+    </h2>-->
+    <!-- Next 4 lines are for AFTER Application season -->
   <!--
    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p><strong>Spring 2022 applications are now closed</strong> but feel free to add
@@ -30,14 +34,14 @@ description:
           </p>
 
           <p>
-  					For interested <strong>Spring 2024 mentors</strong>,
+  					For interested <strong>Fall 2024 mentors</strong>,
             stop by at our infosession for application information and advice!
           </p>
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Wednesday, January 24th - 8:00 PM PST <br>
-            Latimer 120<br>
+            Tuesday, September 10th 8:00-10:00 PM PST <br>
+            Anthropology Art Building 160<br>
           </p>
 
           <p> More details are available on our <a target=_blank
