added application link

--- a/join.html
+++ b/join.html
@@ -11,14 +11,14 @@ description:
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
   <div class="content" style="width: 60%; padding-right: 8%;">
-    <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 Application will be released soon! <br>
+    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 Application will be released soon! <br>
       Our application will be due on Friday, September 13th - 11:59 PM PST.
-    </h2>
+    </h2> -->
 
-    <!--<h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">Application</a>
+    <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSfQCdPA_Z_icio_4uVyUbF40GjANKoSCk7pOaAuKZcPYfkDHw/viewform?pli=1">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
-            Our application is due on Friday, January 26th - 11:59 PM PST.
-    </h2>-->
+            Our application is due on Friday, September 13th - 11:59 PM PST.
+    </h2>
     <!-- Next 4 lines are for AFTER Application season -->
   <!--
    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
