updated join page post-apps

--- a/join.html
+++ b/join.html
@@ -15,17 +15,17 @@ description:
       Our application will be due on Friday, September 13th - 11:59 PM PST.
     </h2> -->
 
-    <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSfQCdPA_Z_icio_4uVyUbF40GjANKoSCk7pOaAuKZcPYfkDHw/viewform?pli=1">Application</a>
+    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSfQCdPA_Z_icio_4uVyUbF40GjANKoSCk7pOaAuKZcPYfkDHw/viewform?pli=1">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
             Our application is due on Friday, September 13th - 11:59 PM PST.
-    </h2>
+    </h2> -->
     <!-- Next 4 lines are for AFTER Application season -->
-  <!--
+  
    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
-    <p><strong>Spring 2022 applications are now closed</strong> but feel free to add
+    <p><strong>Fall 2024 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2022 infosession/application.</p>
-  -->
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2024 infosession/application.</p>
+ 
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
