Join page updates post-apps (#94)
* updated join page post-apps

* fixed join page post-apps

---------

Co-authored-by: Berkeley Beam <beam.teach@gmail.com>

--- a/join.html
+++ b/join.html
@@ -21,15 +21,16 @@ description:
     </h2> -->
     <!-- Next 4 lines are for AFTER Application season -->
   
-   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a> -->
     <p><strong>Fall 2024 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2024 infosession/application.</p>
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Spring 2025 infosession/application.</p>
+
  
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
-          <p>
+          <!-- <p>
             Joining BEAM is the perfect way to share your love for science and engineering with the local community!
           </p>
 
@@ -42,7 +43,7 @@ description:
   					<strong>BEAM Infosession</strong> <br>
             Tuesday, September 10th 8:00-10:00 PM PST <br>
             Anthropology Art Building 160<br>
-          </p>
+          </p> -->
 
           <p> More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/">Facebook</a> and
