--- a/donate.html
+++ b/donate.html
@@ -34,7 +34,7 @@ description:
 
 
 
-        <button style="padding: 2%; width: 35%;" onclick="window.open('https://crowdfund.berkeley.edu/beamin', '_blank')" class="custom-button"><span style="font-size: 0.8em; font-weight: bold;">Donate Now</span></button>
+        <button style="padding: 2%; width: 35%;" onclick="window.open('https://givingday.berkeley.edu/giving-day/92014/donate?dept=94211', '_blank')" class="custom-button"><span style="font-size: 0.8em; font-weight: bold;">Donate Now</span></button>
     </div>
 
 <!-- styling locatd in layout.scss -->
