--- a/lessons.html
+++ b/lessons.html
@@ -20,64 +20,75 @@ description: Each of our lessons is custom-designed by one of our staff members 
 
     <script language="JavaScript">
       var lessons = [
-        ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "misc"],
-        ["oh_buoy", "Oh Buoy!", "Use hands-on demos and modules to give students a deep understanding of density.", "physics"],
-        ["we_belung_together", "We Be-Lung Together", "Learn about the lungs and the importance of our respiratory system.", "biology"],
-        ["drop_it_like_its_hot", "Drop It Like It's Hot", "Introduce students to the concepts of force and impact.", "physics"],
-        ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
-        ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
-        ["blast_off_with_beam", "Blast off With BEAM", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
-        ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
-        ["blue_gene_baby", "Blue Gene Baby", "Explore the topics of genetics and DNA.", "biology"],
-        ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "biology"],
-        ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "biology"],
-        ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
-        ["sugar_rush", "Sugar Rush", "Spend some time exploring how sweet nutrition can be!", "biology"],
-        ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "misc"],
-        ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "physics"],
-        ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
-        ["snap_out_of_it", "Snap Out of It", "A quick introduction to the fundamental ideas and concepts of computer science.", "misc"],
-        ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"],
-        ["beam-takes-flight", "BEAM Takes Flight!", "Learn about the forces of flight!", "current physics"],
-        ["let-there-be-light", "Let There be Light!", "Explore the different properties of light.", "current physics"],
-        ["rain-go-away", "Rain, Rain Go Away", "Introduce the concepts and phenomena behind our weather.", "current misc"],
-        ["the-sixth-senses", "The Sixth Sense(s)", "Discover the senses beyond our 5 basic ones!", "current misc"],
-        ["to-infinity-and-beyond", "To Infinity and Beyond!", "Discover what lies beyond our Earth.", "current misc"],
-        ["acid-base-chemistry", "Bubble, Fizzle, Pop!", "Discover the science behind chemical reactions.", "chemistry"],
-        ["water-we-doing", "Water We Doing?", "Explore the different properties of water.", "chemistry"],
-        ["UnbelievaBUBBLE", "UnbelievaBUBBLE", "Learn more about geometry and surface tension by playing with bubbles!", "chemistry"]
+        {
+          "name": "a_handful_of_fun",
+          "title": "A Handful of Fun",
+          "description": "A handful of applications of bioengineering and prostheses.",
+          "category": "misc"
+        },
+        {
+          "name": "oh_buoy",
+          "title": "Oh Buoy!",
+          "description": "Use hands-on demos and modules to give students a deep understanding of density.",
+          "category": "physics"
+        },
+        {
+          "name": "we_belung_together",
+          "title": "We Be-Lung Together",
+          "description": "Learn about the lungs and the importance of our respiratory system.",
+          "category": "biology"
+        }
 
-
-
-
-        
+        // ["drop_it_like_its_hot", "Drop It Like It's Hot", "Introduce students to the concepts of force and impact.", "physics"],
+        // ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
+        // ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
+        // ["blast_off_with_beam", "Blast off With BEAM", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
+        // ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
+        // ["blue_gene_baby", "Blue Gene Baby", "Explore the topics of genetics and DNA.", "biology"],
+        // ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "biology"],
+        // ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "biology"],
+        // ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
+        // ["sugar_rush", "Sugar Rush", "Spend some time exploring how sweet nutrition can be!", "biology"],
+        // ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "misc"],
+        // ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "physics"],
+        // ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
+        // ["snap_out_of_it", "Snap Out of It", "A quick introduction to the fundamental ideas and concepts of computer science.", "misc"],
+        // ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"],
+        // ["beam-takes-flight", "BEAM Takes Flight!", "Learn about the forces of flight!", "current physics"],
+        // ["let-there-be-light", "Let There be Light!", "Explore the different properties of light.", "current physics"],
+        // ["rain-go-away", "Rain, Rain Go Away", "Introduce the concepts and phenomena behind our weather.", "current misc"],
+        // ["the-sixth-senses", "The Sixth Sense(s)", "Discover the senses beyond our 5 basic ones!", "current misc"],
+        // ["to-infinity-and-beyond", "To Infinity and Beyond!", "Discover what lies beyond our Earth.", "current misc"],
+        // ["acid-base-chemistry", "Bubble, Fizzle, Pop!", "Discover the science behind chemical reactions.", "chemistry"],
+        // ["water-we-doing", "Water We Doing?", "Explore the different properties of water.", "chemistry"],
+        // ["UnbelievaBUBBLE", "UnbelievaBUBBLE", "Learn more about geometry and surface tension by playing with bubbles!", "chemistry"]        
         //["marine_science", "Marine Science", "Dive into oceanic physics, ecology, and conservation."]
       ];
 
       // Sorts lessons in alphabetical order by title
       lessons.sort(function(a,b) {
-        return a[1].localeCompare(b[1]);
+        return a["title"].localeCompare(b["title"]);
       })
 
       html = "";
       for (var i = 0; i < lessons.length; i++) {
         if (i % 3 == 0) {
-          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i][3] +'">';
+          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i]["category"] +'">';
         }
         if (i % 3 == 1) {
-          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i][3] +'">';
+          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i]["category"] +'">';
         }
         if (i % 3 == 2) {
-          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i][3] +'">';
+          html += '<div style = "position: relative; padding-bottom: 5%;" class="thumbnail left filterable ' + lessons[i]["category"] +'">';
         }
         html += '<div class="caption">';
 
         // All images used here are royalty-free stock photos.
-        html += '<img class="lessonImage" src="/images/lessons/' + lessons[i][0] + '.jpg" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
-        html += '<h3>' + lessons[i][1] + '</h3>';
-        html += '<p>' + lessons[i][2] + '</p>';
+        html += '<img class="lessonImage" src="/images/lessons/' + lessons[i]["name"] + '.jpg" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
+        html += '<h3>' + lessons[i]["title"] + '</h3>';
+        html += '<p>' + lessons[i]["description"] + '</p>';
         html += '</div>';
-        html += '<button style = "position: absolute; bottom: 0;" onclick = "window.open(' + "'../lessons_archive/" + lessons[i][0] + ".pdf'," + "'_blank')" + "\"" + 'class="custom-button"><span style= "font-size: .8em; font-weight: normal;">View</span></button></div>';
+        html += '<button style = "position: absolute; bottom: 0;" onclick = "window.open(' + "'../lessons_archive/" + lessons[i]["name"] + ".pdf'," + "'_blank')" + "\"" + 'class="custom-button"><span style= "font-size: .8em; font-weight: normal;">View</span></button></div>';
       }
       document.getElementById("lesson-container").innerHTML += html;
 
