archived old lessons, added new ones

--- a/lessons.html
+++ b/lessons.html
@@ -44,6 +44,12 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "description": "Learn about the structure and function of bones, how they heal when broken, and how they work to produce movement.",
           "category": "biology"
         },
+        {
+          "name": "christmas_BEAM",
+          "title": "The Brightest Bulbs on the Christmas BEAM",
+          "description": "Learn about electricity and its many uses.",
+          "category": "physics"
+        }
 
         
       ];
